# finance_metrics

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
src/data_helper/: API_vs_FLATFILES.md  FINAL_SUMMARY.md  INDEX.md  QUICK_START.md  README.md  TEST_EVERYTHING.sh  __init__.py  example_usage.py  integrate_with_custom_metrics.py  massive_flatfiles.py  put_call_ratio_api.py  test_api.py  test_api_access.py  vix_sentiment.py
src/finance_metrics/: __init__.py  commodity_prices.py  consumer_metrics.py  custom_metrics.py  macro_indicators.py  market_indices.py
src/notebooks/: custom_metrics.ipynb  demo.ipynb
